Fix prompts file path

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
           "openFiles": [
             "README.md",
             "src/frosty_app.py",
-            "prompts.py"
+            "src/prompts.py"
           ]
         },
         "vscode": {
