--- a/.streamlit/example-secrets.toml
+++ b/.streamlit/example-secrets.toml
@@ -1,6 +1,6 @@
 OPENAI_API_KEY = "sk-2...X"
 
-[connections.snowpark]
+[connections.snowflake]
 user = "<username>"
 password = "<pass>"
 warehouse = "MY_WH"
